Add array of food choices for sides, mains, and desserts in data.js

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <footer>
     </footer>
   </body>
+  <script src="data.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </html>
