--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form class="form">
           <input class="radio" type="radio" name="food-type" value="side">
           <label class="radio-text">Side</label><br>
-          <input class="radio" type="radio" name="food-type" value="main-dish">
+          <input class="radio" type="radio" name="food-type" value="main">
           <label class="radio-text">Main Dish</label><br>
           <input class="radio" type="radio" name="food-type" value="dessert">
           <label class="radio-text">Dessert</label><br>
