--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <label class="radio-text">Main Dish</label><br>
           <input class="radio" type="radio" name="food-type" value="dessert">
           <label class="radio-text">Dessert</label><br>
-          <input class="radio" type="radio" name="food-type" value="entire-meal">
+          <input class="radio" type="radio" name="food-type" value="meal">
           <label class="radio-text">Entire Meal</label><br>
           <button id="lets-cook-button">LET'S COOK!</button>
         </form>
