Add clear button and functionality, error handling preventing 'lets cook' click w/o radio selection

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         </form>
       </div>
       <div class="box" id="box-right">
-        <img src="./assets/cookpot.svg" alt="Cookpot" id="cookpot">
+        <div>
+          <img src="./assets/cookpot.svg" alt="Cookpot" id="cookpot">
+        </div>
+        <div id="display-dish-section">
+        </div>
+        <div>
+          <button id="clear-button" class="hidden">CLEAR</button><br>
+        </div>
       </div>
     </main>
     <footer>
