--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       </div>
     </main>
     <footer>
-      <div id="recipe-bar">
-        <form>
+      <div id="recipe-bar" class="hidden">
+        <form id="recipe-form" class="hidden">
           <label class="footer-text">Recipe Type:</label>
           <input id="recipe-input-box" list="recipe-type" name="recipe-type" placeholder="Select...">
 
           <label id="recipe-name" class="footer-text">Recipe Name:</label>
           <input id="recipe-input-box" type="text" name="food-type" placeholder="Enter Recipe Name">
-          <button>ADD NEW</button>
+          <button id="add-new-button">ADD NEW</button>
 
           <datalist id="recipe-type">
             <option value="Side">
