Add functionality to 'add a recipe' button - now saves user data to corresponding data array

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
     <footer>
       <div id="recipe-bar" class="hidden">
         <form id="recipe-form" class="hidden">
+
           <label class="footer-text">Recipe Type:</label>
-          <input id="recipe-input-box" list="recipe-type" name="recipe-type" placeholder="Select...">
+          <input id="add-recipe-type-input" class="recipe-input-box" list="recipe-type" name="recipe-type" placeholder="Select...">
 
           <label id="recipe-name" class="footer-text">Recipe Name:</label>
-          <input id="recipe-input-box" type="text" name="food-type" placeholder="Enter Recipe Name">
+          <input id="add-recipe-name-input" class="recipe-input-box" type="text" name="food-type" placeholder="Enter Recipe Name">
+
           <button id="add-new-button">ADD NEW</button>
 
           <datalist id="recipe-type">
