Add styling and animations to buttons for UX visual cues

--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
         </form>
       </div>
       <div class="box" id="box-right">
+        <div id="loading-animation" class="hidden">
+          <div class="center">
+            <span>🍗 </span>
+            <span>F</span>
+            <span>I</span>
+            <span>N</span>
+            <span>D</span>
+            <span>I</span>
+            <span>N</span>
+            <span>G</span>
+            <span>.</span>
+            <span>F</span>
+            <span>O</span>
+            <span>O</span>
+            <span>D</span>
+            <span>🌯</span>
+          </div>
+        </div>
         <div>
           <img src="./assets/cookpot.svg" alt="Cookpot" id="cookpot">
         </div>
@@ -57,7 +75,7 @@
             <option value="Dessert">Dessert
           </select>
           <label id="recipe-name" class="footer-text">Recipe Name:</label>
-          <input id="add-recipe-name-input" class="recipe-input-box" type="text" name="food-type" placeholder="Enter Recipe Name">
+          <input id="add-recipe-name-input" class="recipe-input-box" type="text" name="food-name" placeholder="Enter Recipe Name">
           <button id="add-new-button">ADD NEW</button>
           <!-- <div id="close-button-block">
             <p id="close-button">X</p>
