Display user recipe when added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <form id="recipe-form" class="slider hidden">
           <label class="footer-text">Recipe Type:</label>
           <select id="add-recipe-type-input" class="recipe-input-box" name="recipe-type" placeholder="Select...">
-            <option>Select...
+            <option value="call-to-action">Select...
             <option value="Side">Side
             <option value="Main Dish">Main Dish
             <option value="Dessert">Dessert
