Add auto uppercase first letter of every word in user added recipe string

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div id="display-dish-section">
         </div>
         <div>
-          <button id="find-recipes-button" class="hidden">FIND RECIPES!</button><br>
-          <button id="clear-button" class="hidden">CLEAR</button><br>
+          <button id="find-recipes-button" class="hidden add-recipe-inputs">FIND RECIPES!</button><br>
+          <button id="clear-button" class="hidden add-recipe-inputs">CLEAR</button><br>
         </div>
       </div>
     </main>
