fix bug allowing duplicates being added to data array, refactor code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </form>
       </div>
       <div class="box" id="box-right">
-        <div id="loading-animation" class="hidden">
+        <!-- <div id="loading-animation" class="hidden">
           <div class="center">
             <span>🍗 </span>
             <span>F</span>
@@ -42,7 +42,7 @@
             <span>D</span>
             <span>🌯</span>
           </div>
-        </div>
+        </div> -->
         <div>
           <img src="./assets/cookpot.svg" alt="Cookpot" id="cookpot">
         </div>
